add integration tests